[package]
name = "credstash"
version = "0.9.0"
description = "Credstash is a utility for managing credentials in the AWS cloud"
keywords = ["AWS", "Amazon", "Secret", "Encryption", "Security"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/psibi/rucredstash"
authors = ["Sibi Prabakaran <sibi@psibi.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.8"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"
rusoto_ec2 = "0.48.0"
rusoto_kms = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_sts = "0.48.0"
ring = "0.16.20"
bytes = "1.1.0"
base64 = "0.13.0"
hex = "0.4.3"
futures = "0.3.21"
either = "1.7.0"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
tokio = "1.19.2"
aes = "0.8.1"
env_logger = "0.9.0"
log = "0.4.17"
cipher = "0.4.3"
crypto-common = "0.1.4"
ctr = "0.9.1"

[lib]
name = "credstash"
path = "src/lib.rs"

[[bin]]
name = "rucredstash"
path = "src/main.rs"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
