[package]
name = "credstash"
version = "0.9.1"
description = "Credstash is a utility for managing credentials in the AWS cloud"
keywords = ["AWS", "Amazon", "Secret", "Encryption", "Security"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/psibi/rucredstash"
authors = ["Sibi Prabakaran <sibi@psibi.in>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.25"
rusoto_core = "0.48.0"
rusoto_dynamodb = "0.48.0"
rusoto_ec2 = "0.48.0"
rusoto_kms = "0.48.0"
rusoto_credential = "0.48.0"
rusoto_sts = "0.48.0"
ring = "0.16.20"
bytes = "1.4.0"
base64 = "0.21.2"
hex = "0.4.3"
futures = "0.3.28"
either = "1.8.1"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.96"
tokio = "1.28.2"
aes = "0.8.2"
env_logger = "0.10.0"
log = "0.4.18"
cipher = "0.4.4"
crypto-common = "0.1.6"
ctr = "0.9.2"

[lib]
name = "credstash"
path = "src/lib.rs"

[[bin]]
name = "rucredstash"
path = "src/main.rs"

[profile.release]
opt-level = 'z'  # Optimize for size.
lto = true
codegen-units = 1
panic = 'abort'
